# Arbor

./: LICENSE  README.md  competition-post.md  index.html  package-lock.json  package.json  parse_conflicts.ts  vite.config.ts
.antigravitycli/: 209b6e84-fee2-4c62-b853-3ab95c1202a5.json
.github/workflows/: ci.yml  release.yml
scripts/: build.ps1  build.sh
softcopyright-output/: 源代码文档_Arbor_20260701.html  软件说明书_Arbor_20260701.html
src/: App.css  App.tsx  notify.ts  providers.ts  settings.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: git_ops.rs  lib.rs  local_ai.rs  oauth.rs
src-tauri/wix/: create-folder.wxs
src/components/: AboutModal.tsx  CloneModal.tsx  ConflictModal.tsx  ContextMenu.tsx  GitGraphViewer.tsx  LocalChangesModal.tsx  ProvidersModal.tsx  PullRequestsPanel.tsx  SettingsModal.tsx
src/i18n/: en.ts  index.ts  zh-CN.ts  zh-TW.ts
src/utils/: conflictParser.ts
